[applets/icon] Delay deleting the open with menu

The menu is parent to the open actions, which are added as contexual actions to the applet

The Applet dtor accesses these actions, so by deleting the menu (and thus the actions) it will access dangling pointers

To avoid that delete the menu later

BUG: 474385
(cherry picked from commit 03b398ed64221638084b88121edf69888f6475a3)